feat: add delete translations endpoint
